# DazSDK

./: .gitignore  CMakeLists.txt  README.md  register_SDK.bat  unregister_SDK.bat
docs/: afirstplugin_def.html  afirstpluginaction_cpp.html  afirstpluginaction_h.html  afirstplugindlg_cpp.html  afirstplugindlg_h.html  afp_pluginmain_cpp.html  annotated.html  bh_pluginmain_cpp.html  blackhole_sample.html  ce_pluginmain_cpp.html  changes.html  changes40.html  class_dz3_d_view_render_handler-members.html  class_dz3_d_view_render_handler.html  class_dz3_d_viewport-members.html  class_dz3_d_viewport.html  class_dz_abstract_asset_container-members.html  class_dz_abstract_asset_container.html  class_dz_abstract_container_list_mime-members.html  class_dz_abstract_container_list_mime.html  class_dz_abstract_content_supplier.html  class_dz_abstract_shape_instance-members.html  class_dz_abstract_shape_instance.html  class_dz_action-members.html  class_dz_action.html  class_dz_action_menu-members.html  class_dz_action_menu.html  class_dz_action_menu_item-members.html  class_dz_action_menu_item.html  class_dz_action_mgr-members.html  class_dz_action_mgr.html  class_dz_activation_policy-members.html  class_dz_activation_policy.html  class_dz_activity_layout-members.html  class_dz_activity_layout.html  class_dz_app-members.html  class_dz_app.html  class_dz_app_settings-members.html  class_dz_app_settings.html  class_dz_app_settings_mgr-members.html  (+1717 more)
include/: dpcgeometry.h  dpcimages.h  dpcscript.h  dpctext.h  dz3dviewrenderhandler.h  dzabstractassetcontainer.h  dzabstractshapeinstance.h  dzaction.h  dzactivationpolicy.h  dzapp.h  dzappsettingsmgr.h  dzassetcontaineritemmodel.h  dzassetextraobjectio.h  dzassetiofilter.h  dzassetiomgr.h  dzassetitemmodel.h  dzassetmgr.h  dzassetoutfile.h  dzauthenticationmgr.h  dzaxisconverter.h  dzbakeroptions.h  dzbase.h  dzbasicmaterialarea.h  dzboolproperty.h  dzboolpropertywgt.h  dzbrickmaterial.h  dzbrickparam.h  dzbrickset.h  dzbufferobject.h  dzbuttonbar.h  dzbyteutil.h  dzcallbackmgr.h  dzclassfactory.h  dzcolorproperty.h  dzcolorpropertywgt.h  dzcontentfolder.h  dzcontentmgr.h  dzcontentreplacemgr.h  dzcontentsearchoptions.h  dzcontroller.h  (+159 more)
include/QtCore/: qfuture.h  qglobal.h  qlinkedlist.h  qlist.h  qmap.h  qtconcurrentiteratekernel.h
include_osx/: dpcglsl.h  dz3dviewport.h  dzactionmenu.h  dzactionmgr.h  dzactivitylayout.h  dzappsettings.h  dzasset.h  dzassetjsonitem.h  dzassetmetadata.h  dzaudioclip.h  dzaudioimporter.h  dzauthor.h  dzbackdrop.h  dzbasiccamera.h  dzbasicdialog.h  dzbasicpropertywgt.h  dzbone.h  dzbonebinding.h  dzboolbutton.h  dzbox3.h  dzbrickcamera.h  dzbricklight.h  dzbrickoptionsframe.h  dzbulgebinding.h  dzcamera.h  dzcategoryassetcontainer.h  dzcircle3.h  dzcolorgradient.h  dzcolorwgt.h  dzcompatibilitybaseassetcontainer.h  dzcontentdropoptions.h  dzcontentfile.h  dzcontentsearchutilities.h  dzcontenttypedefs.h  dzcontrollerhelper.h  dzcontrollerwgt.h  dzcreatenewitemdlg.h  dzdefaultinparam.h  dzdevice.h  dzdformmodifier.h  (+125 more)
include_osx/QtCore/: qconfig.h  qhash.h  qset.h  qvector.h
lib/Mac64/: libQtCLucene.4.7.dylib
lib/Mac64/Qt3Support.framework/: Qt3Support
lib/Mac64/Qt3Support.framework/Contents/: Info.plist
lib/Mac64/QtCore.framework/: QtCore
lib/Mac64/QtDesignerComponents.framework/Contents/: Info.plist
lib/Mac64/QtNetwork.framework/: QtNetwork
lib/Mac64/QtScript.framework/: QtScript
lib/Mac64/QtScriptTools.framework/: QtScriptTools
lib/Mac64/QtSql.framework/: QtSql
lib/Mac64/imageformats/: libqgif.dylib  libqico.dylib  libqjpeg.dylib  libqmng.dylib  libqsvg.dylib  libqtga.dylib  libqtiff.dylib
lib/Mac64/phonon.framework/: phonon
lib/Mac64/phonon_backend/: libphonon_qt7.dylib
lib/x64/: Qt3Support4.lib  QtCore4.lib  QtNetwork4.lib  QtOpenGL4.lib  QtScript4.lib  QtSql4.lib  QtXml4.lib
samples/: CMakeLists.txt
samples/Tools/: CMakeLists.txt
samples/Tools/ViewTool/: CMakeLists.txt  DzCustomTransformTool.rc  dzcustomtransformtool.cpp  dzcustomtransformtool.h  dzcustomtransformtoolaction.cpp  dzcustomtransformtoolaction.h  dzcustomtransformtoolpane.cpp  dzcustomtransformtoolpane.h  pluginmain.cpp  version.h
samples/Tools/ViewTool/build_data/: dzcustomtransformtooldpcimages.cpp  imagelist.txt
samples/applications/: CMakeLists.txt
samples/applications/SceneLoaderApp/: CMakeLists.txt  SceneLoaderApp.rc  dzsceneloader.h  main.cpp  version.h
samples/interface/: CMakeLists.txt
samples/interface/AFirstPlugin/: AFirstPlugin.rc  CMakeLists.txt  afirstpluginaction.cpp  afirstpluginaction.h  afirstplugindlg.cpp  afirstplugindlg.h  pluginmain.cpp  version.h
samples/interface/DzActivateFullScreenModeAction/: CMakeLists.txt  DzActivateFullScreenModeAction.rc  dzactivatefullscreenmodeaction.cpp  dzactivatefullscreenmodeaction.h  pluginmain.cpp  version.h
samples/interface/DzActivateFullScreenModeAction/docs/Plugins/SDK_ActivateFullScreenMode/: ActivateFullScreenMode.dsx  ActivateFullScreenModeInlineHelp.dsx  ActivateFullScreenModeREADME.htm
samples/interface/DzSceneInfo/: CMakeLists.txt  DzSceneInfo.rc  dzinfopane.cpp  dzinfopane.h  pluginmain.cpp  version.h
samples/modifiers/: CMakeLists.txt
samples/modifiers/DzBlackHole/: CMakeLists.txt  DzBlackHole.rc  dzblackholeaction.cpp  dzblackholeaction.h  dzblackholemod.cpp  dzblackholemod.h  dzblackholenode.cpp  dzblackholenode.h  pluginmain.cpp  version.h
samples/saving/: CMakeLists.txt
samples/saving/customelements/: CMakeLists.txt  customelements.rc  mycustommaterial.cpp  mycustommaterial.h  mycustommodifier.cpp  mycustommodifier.h  mycustomnode.cpp  mycustomnode.h  mycustomshape.cpp  mycustomshape.h  pluginmain.cpp  version.h
samples/saving/customscenedata/: CMakeLists.txt  myscenemodel.cpp  myscenemodel.h  mysceneview.cpp  mysceneview.h  pluginmain.cpp  scenedata.rc  version.h
samples/shaderbricks/: CMakeLists.txt
samples/shaderbricks/DzCurveBrick/: CMakeLists.txt  DzCurveBrick.rc  dzcurvebrick.cpp  dzcurvebrick.h  pluginmain.cpp  version.h
samples/shaderbricks/DzCurveBrick/scripts/: curvehair.sl  dpcscript.cpp  scriptlist.txt
(+8 files in other folders)
